copyright: Update copyright years.

--- a/00-index.dbk
+++ b/00-index.dbk
@@ -20,7 +20,8 @@
   <copyright>
     <year>2009</year>
     <year>2010</year>
-    <holder>Rogério Brito</holder>
+    <year>2011</year>
+    <holder>Rogério Theodoro de Brito</holder>
   </copyright>
 
   <legalnotice>
